pass the ScRangeList directly to improve performance, fdo#49764

Change-Id: I1dde25739747a3481394c6a2c2d313128492ba8e